--- a/html/settings.json
+++ b/html/settings.json
@@ -6,8 +6,12 @@
   "bg_r": "0",
   "bg_g": "0",
   "bg_b": "0",
+  "eq_r": "255",
+  "eq_g": "255",
+  "eq_b": "255",
   "eq_size": "0.49",
   "eq_height": "0.67",
+  "eq_mirrored": "1",
   "filterFreq": "3520",
   "filterRes": "3.223"
 }
