--- a/html/settings_bk.json
+++ b/html/settings_bk.json
@@ -1,11 +1,17 @@
 {
     "image_path": "logo.svg",
-    "smooth": "0.9",
-    "bandspace": "13",
-    "imagesize": "4",
+    "smooth": "0.8",
+    "bandspace": "12",
+    "imagesize": "3",
     "bg_r": "0",
     "bg_g": "0",
     "bg_b": "0",
-    "eq_size": "0.35",
-    "eq_height": "0.71"
+    "eq_r": "255",
+    "eq_g": "255",
+    "eq_b": "255",
+    "eq_size": "0.49",
+    "eq_height": "0.67",
+    "eq_mirrored": "1",
+    "filterFreq": "3520",
+    "filterRes": "3.223"
 }
