--- a/html/settings_bk.json
+++ b/html/settings_bk.json
@@ -2,7 +2,9 @@
     "image_path": "logo.svg",
     "smooth": "0.8",
     "bandspace": "12",
-    "imagesize": "3",
+    "bandstroke": "2",
+    "bandstroke_mirrored": "0.1",
+    "imagesize": "0.4",
     "bg_r": "0",
     "bg_g": "0",
     "bg_b": "0",
@@ -12,6 +14,8 @@
     "eq_size": "0.49",
     "eq_height": "0.67",
     "eq_mirrored": "1",
+    "eq_switched": "0",
+    "eq_normalize": "0",
     "filterFreq": "3520",
     "filterRes": "3.223"
 }
