--- a/html/settings_bk.json
+++ b/html/settings_bk.json
@@ -1,9 +1,9 @@
 {
-    "image_path": "logo.svg",
-    "smooth": "0.8",
-    "bandspace": "12",
-    "bandstroke": "2",
-    "bandstroke_mirrored": "0.1",
+    "image_path": "svg/logo.svg",
+    "smooth": "0",
+    "bandspace": "5",
+    "bandstroke": "2.4",
+    "bandstroke_mirrored": "0.3",
     "imagesize": "0.4",
     "bg_r": "0",
     "bg_g": "0",
@@ -11,11 +11,16 @@
     "eq_r": "255",
     "eq_g": "255",
     "eq_b": "255",
-    "eq_size": "0.49",
-    "eq_height": "0.67",
+    "eq_size": "0.68",
+    "eq_height": "0.78",
     "eq_mirrored": "1",
-    "eq_switched": "1",
-    "eq_normalize": "0",
-    "filterFreq": "3520",
-    "filterRes": "3.223"
+    "eq_switched": "0",
+    "eq_bounce": "1",
+    "eq_preset": "2",
+    "eq_cutoff": "0.88",
+    "np_enabled": "1",
+    "np_link": "https://nowplaying.aidenwallis.co.uk/5e3207f18bdd560a8e9d515d",
+    "np_use_link": "1",
+    "np_x": "0",
+    "np_y": "0"
 }
