--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
             "html/**/*"
         ]
     },
+    "scripts": {
+        "start": "node server.js"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/migmac99/visual-eq"
