--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "pkg": "^4.4.2",
-        "spotify-web-api-node": "^4.0.0"
+        "spotify-web-api-node": "^4.0.0",
+        "json-schema": ">=0.4.0"
     }
 }
